updated crm data integrations creatives in yaml

--- a/_data/pageconfig/solutions.yaml
+++ b/_data/pageconfig/solutions.yaml
@@ -1,6 +1,104 @@
 pages:
+  crm-data-integrations.md:
+    title: CRM Data Integrations
+    tagline: "Unify Your Data, Empower Your Success: CRM Integrations Made Seamless!"
+    outcome_image: /assets/img/icons/lineal/target.svg
+    obstacle_image: /assets/img/icons/lineal/puzzle.svg
+
+    desired_outcomes:
+      - 
+        category: Streamlined Workflows
+        description: Simplify your business processes by integrating all your data sources into one powerful CRM system.
+
+      - 
+        category: Enhanced Decision Making
+        description: Gain deeper insights into your customer data, enabling smarter decisions and more targeted strategies.
+
+      - 
+        category: Time & Cost Efficiency
+        description: Reduce time spent on manual data entry and minimize errors, freeing up resources to focus on core business tasks.
+
+      - 
+        category: Improved Customer Experience
+        description: Better understand your customers and provide personalized experiences that drive loyalty and retention.
+
+      - 
+        category: Scalable Growth
+        description: Future-proof your business with a CRM system that can adapt and expand alongside your evolving data needs.
+
+      - 
+        category: Data Security & Compliance
+        description: Safeguard your customer information with security and data management that ensure regulatory compliance.
+
+    common_obstacles:
+      - category: Disparate Data Sources
+        description: Handling multiple data sources with varying formats can lead to difficulties in consolidating and managing customer information.
+
+      - category: Limited Technical Expertise
+        description: Lack of in-house technical expertise can hinder the successful implementation and ongoing management of CRM data integrations.
+
+      - category: Data Quality Issues
+        description: Inaccurate or incomplete data can negatively impact the effectiveness of CRM systems and the insights derived from them.
+
+      - category: Inadequate Data Security
+        description: Insufficient data security measures can compromise sensitive customer information, resulting in reputational damage and non-compliance.
+
+      - category: Resistance to Change
+        description: Organisational resistance to adopting new technology can create challenges in implementing CRM data integrations and achieving desired outcomes.
+
+      - category: Insufficient Budget Allocation
+        description: Limited financial resources may prevent businesses from investing in the necessary CRM data integration tools and services.
+
+    outcomes_vs_painpoints:
+      - category: Streamlined Workflows
+        priority: 1
+        painpoints:
+          - Inefficient manual processes
+          - Difficulty in tracking customer interactions
+          - Wasted resources due to redundant tasks
+
+      - category: Enhanced Decision Making
+        priority: 2
+        painpoints:
+          - Inability to uncover hidden patterns in data
+          - Ineffective marketing and sales strategies
+          - Suboptimal resource allocation
+
+      - category: Time and Cost Efficiency
+        priority: 3
+        painpoints:
+          - High operational costs due to manual data handling
+          - Increased error rates in data entry
+          - Time-consuming data management tasks
+
+      - category: Improved Customer Experience
+        priority: 4
+        painpoints:
+          - Inconsistent customer communication
+          - Difficulty in identifying customer needs and preferences
+          - Loss of business due to unsatisfactory service
+
+      - category: Scalable Growth
+        priority: 5
+        painpoints:
+          - Limited capacity to handle increasing data volumes
+          - Difficulty in adopting new technologies
+          - Hindered business expansion due to rigid systems
+
+      - category: Data Security and Compliance
+        priority: 6
+        painpoints:
+          - Vulnerability to data breaches
+          - Non-compliance with industry regulations
+          - Damage to brand reputation due to security incidents
+    
+    pitch: >
+      <p>At AxOps&#8482;, we understand the importance of seamless CRM data integration in today's competitive business landscape. Our comprehensive suite of services is designed to help you achieve streamlined workflows, enhanced decision-making, time and cost efficiency, improved customer experience, scalable growth, and robust data security and compliance.</p>
+      <p>Our team of industry experts is well-versed in overcoming the challenges that come with CRM data integration. We tackle obstacles such as disparate data sources, limited technical expertise, data quality issues, inadequate data security, resistance to change, and insufficient budget allocation. Our goal is to ensure a smooth and successful implementation of your CRM system, empowering your business to thrive.</p>
+      <p>With our extensive experience, we help clients transform their operations, uncover valuable insights, and optimise resource allocation by addressing the pain points associated with manual processes, ineffective strategies, and inefficient data management. We take pride in our ability to adapt and scale our solutions to meet your evolving data needs, ensuring your CRM system remains future-proof and your business poised for growth.</p>
+      <p>Choose AxOps&#8482; as your trusted partner for CRM data integration, and experience the difference our expertise can make in unlocking your business's full potential. Let us help you turn challenges into opportunities and drive your success to new heights.</p>
+
   crm-data-migrations.md:
-    business-analytics.md:
     title: CRM Data Migrations
     tagline: "Seamlessly migrate your data with AxOps&#8482; CRM Data Migration Solutions"
     outcome_image: /assets/img/icons/lineal/target.svg
