added digital transformation solution creatives

--- a/_data/pageconfig/solutions.yaml
+++ b/_data/pageconfig/solutions.yaml
@@ -1,4 +1,100 @@
 pages:
+
+  digital-transformation.md:
+    title: Digital Transformation
+    tagline: "Empower Your Future: Unleash the Potential of Digital Transformation"
+
+    outcome_image: /assets/img/icons/lineal/target.svg
+    obstacle_image: /assets/img/icons/lineal/puzzle.svg
+
+    desired_outcomes:
+      - category: Operational Efficiency
+        description: "Streamlining processes and workflows to maximise productivity, reduce costs, and optimise resource utilisation."
+
+      - category: Enhanced Customer Experience
+        description: "Leveraging digital technologies to personalise interactions, improve service quality, and foster customer loyalty."
+
+      - category: Data-Driven Decision Making
+        description: "Utilising data analytics and insights to make informed strategic choices and drive business growth."
+
+      - category: Innovation & Agility
+        description: "Adopting a proactive approach to identify new opportunities, adapt to market changes, and maintain a competitive edge."
+
+      - category: Workforce Empowerment
+        description: "Investing in upskilling and reskilling programmes to develop a future-ready workforce that thrives in the digital landscape."
+
+      - category: Scalable & Sustainable Growth
+        description: "Creating a robust digital infrastructure to support long-term expansion and adaptability, whilst ensuring environmental and social responsibility."
+
+    common_obstacles:
+      - category: Technical Issues
+        description: "Encountering hardware or software malfunctions that hinder seamless operations and impede progress."
+
+      - category: Skill Gaps
+        description: "Insufficient expertise or knowledge within the team, leading to challenges in executing tasks efficiently and effectively."
+
+      - category: Communication Barriers
+        description: "Lack of information exchange across the organisation, causing delays or errors in achieving desired outcomes."
+
+      - category: Organisational Resistance
+        description: "Internal pushback or reluctance from employees, preventing the adoption of new strategies and technologies."
+
+      - category: Resource Constraints
+        description: "Limited financial or other resources, which restricts the implementation of digital transformation initiatives."
+
+      - category: Regulatory Compliance
+        description: "Navigating complex and ever-changing legal and regulatory requirements, which can slow down or complicate digital transformation efforts."
+
+    outcomes_vs_painpoints:
+      - category: Operational Efficiency
+        priority: 1
+        painpoints:
+          - "Manual, time-consuming processes that decrease overall productivity."
+          - "Inefficient resource allocation leading to increased operational costs."
+          - "Limited visibility into process performance, hindering improvement efforts."
+
+      - category: Enhanced Customer Experience
+        priority: 2
+        painpoints:
+          - "Inconsistent and impersonal customer interactions causing dissatisfaction."
+          - "Slow response times, negatively impacting customer trust and loyalty."
+          - "Inability to effectively track and analyse customer feedback and preferences."
+
+      - category: Data-Driven Decision Making
+        priority: 3
+        painpoints:
+          - "Lack of access to relevant, accurate, and timely data for informed decision making."
+          - "Insufficient analytical capabilities to derive actionable insights from data."
+          - "Inability to effectively integrate data from various sources for a comprehensive view."
+
+      - category: Innovation and Agility
+        priority: 4
+        painpoints:
+          - "Difficulty in adapting to rapidly changing market conditions and customer needs."
+          - "Limited capacity for experimentation and innovation, affecting competitiveness."
+          - "Ineffective change management processes, causing disruptions and delays."
+
+      - category: Workforce Empowerment
+        priority: 5
+        painpoints:
+          - "Skills gaps and resistance to change, affecting the adoption of new technologies."
+          - "Low employee engagement and morale, resulting in decreased productivity."
+          - "Inadequate training and development opportunities, limiting workforce capabilities."
+
+      - category: Scalable and Sustainable Growth
+        priority: 6
+        painpoints:
+          - "Legacy systems and infrastructure that hinder growth and scalability."
+          - "Difficulty in maintaining business continuity during digital transformation initiatives."
+          - "Inability to balance growth objectives with environmental and social responsibilities."
+
+    pitch: >
+      <p>At AxOps&#8482;, we understand the complexities of digital transformation and the diverse challenges businesses face in today's dynamic landscape. With extensive experience in the industry, we are uniquely positioned to help you overcome obstacles and unlock the true potential of digital transformation. Our tailored services are designed to deliver exceptional outcomes, empowering your organisation to thrive in an increasingly digital world.</p>
+      <p>Our team of experts focuses on driving operational efficiency, ensuring your processes are streamlined, resources optimised, and productivity maximised. We help you leverage digital technologies to enhance customer experience, personalise interactions, and foster customer loyalty, while promoting a data-driven approach to decision making. By embracing innovation and agility, we enable your business to adapt to market changes, maintain a competitive edge, and seize new opportunities.</p>
+      <p>We prioritise workforce empowerment, offering upskilling and reskilling programmes that equip your team with the tools and knowledge needed to excel in the digital landscape. Our commitment to scalable and sustainable growth ensures the development of robust digital infrastructure, enabling long-term expansion and adaptability, without compromising environmental or social responsibility.</p>
+      <p>Together, we'll tackle the technical issues, skill gaps, communication barriers, organisational resistance, and resource constraints that can impede your progress. Our comprehensive approach addresses regulatory compliance, ensuring your digital transformation efforts align with legal and industry requirements. With our support, you can confidently navigate the challenges of digital transformation and achieve outstanding results.</p>
+      <p>Let us be your trusted partner in digital transformation, and experience the transformative impact of our services on your business success.</p>
+
   crm-data-integrations.md:
     title: CRM Data Integrations
     tagline: "Unify Your Data, Empower Your Success: CRM Integrations Made Seamless!"
