added blockchain development creatives in yaml

--- a/_data/pageconfig/solutions.yaml
+++ b/_data/pageconfig/solutions.yaml
@@ -1,5 +1,97 @@
 pages:
 
+  blockchain-development.md:
+    title: Blockchain Development
+    tagline: "Unleashing Trust, Transparency, and Security with Blockchain Technology"
+    outcome_image: /assets/img/icons/lineal/target.svg
+    obstacle_image: /assets/img/icons/lineal/puzzle.svg
+
+    desired_outcomes:
+      - category: Enhanced Security
+        description: Experience unparalleled protection with tamperproof, cryptography-based transaction records.
+
+      - category: Improved Transparency
+        description: Foster trust among network members with a shared, real-time updated digital ledger.
+
+      - category: Streamlined Efficiency
+        description: Accelerate data sharing and reduce manual processes with a decentralised, peer-to-peer database.
+
+      - category: Reduced Costs
+        description: Minimise intermediaries and administrative overheads by leveraging a self-verifying system.
+
+      - category: Traceability and Tracking
+        description: Monitor asset movements with ease, ensuring authenticity and combating fraud.
+
+      - category: Cross-industry Applications
+        description: Discover the versatility of blockchain technology, revolutionising diverse sectors from finance to supply chains.
+
+    common_obstacles:
+      - category: Technical Complexity
+        description: Navigating the intricacies of blockchain development can be challenging for those without prior experience.
+
+      - category: Scalability Concerns
+        description: Achieving optimal performance and transaction speed as the network grows needs careful planning and investment.
+
+      - category: Integration Issues
+        description: Aligning blockchain technology with existing systems and processes can be a complex and time-consuming endeavour.
+
+      - category: Regulatory Uncertainty
+        description: Evolving regulations and compliance requirements in various jurisdictions may pose challenges for blockchain implementation.
+
+      - category: Security Risks
+        description: Ensuring the robustness of encryption and protection against potential cyber-attacks is crucial for maintaining a secure network.
+
+      - category: Resource Constraints
+        description: Developing, deploying, and maintaining a blockchain network may demand significant investment in human and financial resources.
+
+    outcomes_vs_painpoints:
+      - category: Enhanced Security
+        priority: 1
+        painpoints:
+          - Protecting sensitive data from unauthorised access
+          - Ensuring data integrity and preventing tampering
+          - Mitigating risks of fraud and data breaches
+
+      - category: Improved Transparency
+        priority: 2
+        painpoints:
+          - Building trust among stakeholders and network members
+          - Maintaining a clear audit trail for transactions and asset movements
+          - Ensuring compliance with regulatory reporting requirements
+
+      - category: Streamlined Efficiency
+        priority: 3
+        painpoints:
+          - Reducing time-consuming manual processes
+          - Minimising data discrepancies and reconciliation efforts
+          - Enhancing cross-organisational collaboration
+
+      - category: Reduced Costs
+        priority: 4
+        painpoints:
+          - Lowering transaction fees and intermediary expenses
+          - Decreasing administrative overheads and labour costs
+          - Optimising resource utilisation and reducing waste
+
+      - category: Traceability and Tracking
+        priority: 5
+        painpoints:
+          - Ensuring the authenticity of goods and services
+          - Identifying and addressing bottlenecks in supply chains
+          - Combatting counterfeiting and fraud in the marketplace
+
+      - category: Cross-industry Applications
+        priority: 6
+        painpoints:
+          - Adapting blockchain technology to specific sector requirements
+          - Overcoming industry-specific barriers to adoption
+          - Ensuring seamless integration with existing systems and processes
+
+    pitch: >
+      <p>At AxOps&#8482;, we are dedicated to unlocking the potential of blockchain technology for your business. Our team is committed to helping you achieve enhanced security, improved transparency, streamlined efficiency, reduced costs, and advanced traceability.</p>
+      <p>We understand that navigating the complexities of blockchain development can be challenging. Our expertise and deep understanding of the industry enable us to tackle these challenges head-on, ensuring a seamless transition to a future powered by blockchain technology.</p>
+      <p>With our extensive experience in the industry, we are well-equipped to address the unique challenges of your sector, ensuring the seamless integration of blockchain technology into your existing systems and processes. Trust AxOps&#8482; to guide you through the transformational journey that is blockchain adoption, as we work together to revolutionise the way your business operates and thrives.</p>
+
   application-engineering.md:
     title: Application Engineering
     tagline: "Empowering Innovation: Engineering Applications for Tomorrow's Success"
